--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Manohar Naga</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #000;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+    header {
+      background: #fff;
+      padding: 1rem;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 1.5rem;
+    }
+    .pdf-wrapper {
+      flex: 1;
+      margin: auto;
+      overflow: hidden;
+    }
+    .pdf-wrapper embed,
+    .pdf-wrapper iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .download-btn {
+      text-align: center;
+      padding: 0.5rem;
+      background: #fff;
+    }
+    .download-btn a {
+      display: inline-block;
+      text-decoration: none;
+      color: #fff;
+      background: #000;
+      padding: 1rem 1.5rem;
+      border-radius: 3rem;
+    }
+    .download-btn a:hover {
+      background: #444;
+      color: #fff;
+    }
+    .punchline {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 2px 0;
+      font-size: 0.8rem;
+    }
+    .marquee-wrapper {
+        overflow: hidden;
+        white-space: nowrap;
+        background-color: #000;
+        color: #fff;
+        padding: 0.3rem;
+    }
+    .marquee-text {
+        display: inline-block;
+        padding-left: 100%;
+        animation: marquee 10s linear infinite;
+    }
+    @keyframes marquee {
+        from   { transform: translateX(0); }
+        to     { transform: translateX(-100%); }
+    }
+  </style>
+</head>
+<body>
+    <div>
+        <header style="font-family:cursive;background-color: #000;color: #fff;">
+            <h1>Manohar Naga</h1>
+        </header>
+        <div class="marquee-wrapper">
+            <div class="marquee-text">Enjoying every piece of code</div>
+        </div>
+    </div>
+  
+
+  <div class="pdf-wrapper">
+    <!-- Try embed first -->
+    <embed
+      src="resume.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH"
+      type="application/pdf">
+    <!-- Fallback for browsers that don’t support <embed> -->
+    <iframe
+      src="resume.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH"
+      title="Resume PDF">
+    </iframe>
+  </div>
+
+  <div class="download-btn">
+    <a href="resume.pdf" download>Download PDF</a>
+  </div>
+
+</body>
+</html>
