--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: #000;
-      display: flex;
+      display: none;
       flex-direction: column;
       height: 100vh;
     }
